fix filter & spacing

--- a/src/styles/ArtworkDetail.css
+++ b/src/styles/ArtworkDetail.css
@@ -59,5 +59,19 @@
 @media (max-width: 768px) {
 	.artwork-details {
 		grid-template-columns: 1fr;
+		text-align: center;
+		gap: unset;
 	}
+
+	.artwork-title {
+		margin-bottom: 0;
+	}
+
+	/* .artwork-text {
+		order: 1;
+	}
+
+	.custom-carousel {
+		order: 2;
+	} */
 }
